--- a/equipe.html
+++ b/equipe.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <!-- Même entête que index.html -->
+    <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
     <!-- Barre de navigation -->
-    <!-- ... -->
-
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="equipe.html">Équipe</a></li>
+        </ul>
+    </nav>
     <!-- Contenu de la page de présentation du personnel -->
     <section>
         <h1>Notre Équipe</h1>
@@ -27,4 +36,5 @@
         <!-- Ajoutez plus d'articles pour chaque membre de l'équipe -->
     </section>
 </body>
+
 </html>
