--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <!-- Même entête que index.html -->
+    <link rel="stylesheet" href="styles.css">
+
 </head>
+
 <body>
     <!-- Barre de navigation -->
-    <!-- ... -->
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="equipe.html">Équipe</a></li>
+        </ul>
+    </nav>
 
-    <!-- Contenu de la page de contact -->
     <section>
         <h1>Contactez-nous</h1>
-        <p>Pour toute question, veuillez nous contacter à l'adresse suivante :</p>
-        <address>
-            Votre Librairie<br>
-            Adresse<br>
-            Ville, Code postal<br>
-            Email: contact@votrelibrairie.com
-        </address>
+        <form action="process_contact.php" method="post" role="form">
+            <!-- Prénom -->
+            <label for="firstname">Prénom:</label>
+            <input type="text" id="firstname" name="firstname" required aria-required="true">
+            <!-- Nom -->
+            <label for="name">Nom:</label>
+            <input type="text" id="name" name="name" required aria-required="true">
+
+            <!-- Email -->
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required aria-required="true">
+
+            <!-- Message -->
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="4" required aria-required="true"></textarea>
+
+            <!-- Bouton Soumettre -->
+            <button type="submit">Envoyer</button>
+        </form>
     </section>
 </body>
+
 </html>
