Add section class

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
 
-    <section>
+    <section class="contact-section">
         <h1>Contactez-nous</h1>
         <form action="process_contact.php" method="post" role="form">
             <!-- Prénom -->
