--- a/index.html
+++ b/index.html
@@ -23,11 +23,34 @@
         <div class="article" tabindex="4">
             <img src="Data/Book_Open.jpg" alt="Image Livre 1">
             <div>
+                <h2><span class="title">Essai de M. Le Gall Lou</span></h2>
+                <dl>
+                    <div class="information">
+                        <dt><span class="label">Titre:</span></dt>
+                        <dd>Psycho-social par M.Le Gall</dd>
+
+                        <dt><span class="label">Auteur:</span></dt>
+                        <dd>Mme. Le Gall Lou</dd>
+
+                        <dt><span class="label">Description:</span></dt>
+                        <dd>Un superbe livre parlant de psycho d'après Mme. Le Gall.</dd>
+
+                    </div>
+                    <div class="button center">
+                        <a href="Book/bookLou.html" class="view-details" tabindex="5">Voir les détails</a>
+                    </div>
+                </dl>
+            </div>
+        </div>
+
+        <div class="article" tabindex="6">
+            <img src="Data/Book_Open.jpg" alt="Image Livre 1">
+            <div>
                 <h2><span class="title">Essai de M. Cordier Maxime</span></h2>
                 <dl>
                     <div class="information">
                         <dt><span class="label">Titre:</span></dt>
-                        <dd>Psycho-social par M.CORDIER</dd>
+                        <dd>Psycho-social par M.Cordier</dd>
 
                         <dt><span class="label">Auteur:</span></dt>
                         <dd>M. Cordier Maxime</dd>
@@ -35,77 +58,36 @@
                         <dt><span class="label">Description:</span></dt>
                         <dd>Un superbe livre parlant de psycho d'après M. Cordier.</dd>
 
-                        <dt><span class="label">Prix:</span></dt>
-                        <dd>19.99 €</dd>
                     </div>
-                    <div class="button">
-                        <a href="Book/livreMaxime.html" class="view-details" tabindex="8">Voir les détails</a>
+                    <div class="button center">
+                        <a href="Book/bookMaxime.html" class="view-details" tabindex="7">Voir les détails</a>
                     </div>
                 </dl>
             </div>
         </div>
 
-
-        <div class="article">
-            <img src="Data/Book_Open.jpg" alt="Image Livre 2">
-            <div>
-                <h2><span class="title">Essai de M. Le Gall Lou</span></h2>
-                <dl>
-                    <dt><span class="label">Titre:</span></dt>
-                    <dd>Psycho-social par M.Le Gall</dd>
-
-                    <dt><span class="label">Auteur:</span></dt>
-                    <dd>Mme. Le Gall Lou</dd>
-
-                    <dt><span class="label">Description:</span></dt>
-                    <dd>Un superbe livre parlant de psycho d'après M. Cordier.</dd>
-
-                    <dt><span class="label">Prix:</span></dt>
-                    <dd>24.99 €</dd>
-                </dl>
-            </div>
-        </div>
-
-        <div class="article">
-            <img src="Data/Book_Open.jpg" alt="Image Livre 3">
+        <div class="article" tabindex="8">
+            <img src="Data/Book_Open.jpg" alt="Image Livre 1">
             <div>
                 <h2><span class="title">Essai de M. Uhartegaray Rémi</span></h2>
                 <dl>
-                    <dt><span class="label">Titre:</span></dt>
-                    <dd>Psycho-social par M.Uhartegaray</dd>
+                    <div class="information">
+                        <dt><span class="label">Titre:</span></dt>
+                        <dd>Psycho-social par M. Uhartegaray</dd>
 
-                    <dt><span class="label">Auteur:</span></dt>
-                    <dd>Auteur 3</dd>
+                        <dt><span class="label">Auteur:</span></dt>
+                        <dd>M. Uharttegaray Rémi</dd>
 
-                    <dt><span class="label">Description:</span></dt>
-                    <dd>Description du livre 3.</dd>
+                        <dt><span class="label">Description:</span></dt>
+                        <dd>Un superbe livre parlant de psycho d'après M. Uhartegaray.</dd>
 
-                    <dt><span class="label">Prix:</span></dt>
-                    <dd>4.99 €</dd>
+                    </div>
+                    <div class="button center">
+                        <a href="Book/bookRemi.html" class="view-details" tabindex="9">Voir les détails</a>
+                    </div>
                 </dl>
             </div>
         </div>
-
-        <div class="article">
-            <img src="Data/Book_Open.jpg" alt="Image Livre 4">
-            <div>
-                <h2><span class="title">Livre 4</span></h2>
-                <dl>
-                    <dt><span class="label">Titre:</span></dt>
-                    <dd>Livre 4</dd>
-
-                    <dt><span class="label">Auteur:</span></dt>
-                    <dd>Auteur 4</dd>
-
-                    <dt><span class="label">Description:</span></dt>
-                    <dd>Description du livre 4.</dd>
-
-                    <dt><span class="label">Prix:</span></dt>
-                    <dd>99 €</dd>
-                </dl>
-            </div>
-        </div>
-        <!-- Ajoutez plus d'divs pour chaque livre -->
     </section>
 
 
