Add personnalised book images

--- a/Book/bookLou.html
+++ b/Book/bookLou.html
@@ -22,7 +22,7 @@
     <section class="book-page">
         <div class="book-details">
             <h1>Essai de Mme. Le Gall Lou</h1>
-            <img src="../Data/Book_Open.jpg" alt="Image Livre 1">
+            <img src="../Data/Book_Lou.png" alt="Image Livre 1">
             <p class="author">Auteur: M. Le Gall Lou</p>
             <p class="description">Un superbe livre parlant de psycho d'après Mme. Le Gall. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel nunc ut lacus convallis facilisis.</p>
         </div>
