--- a/Book/bookMaxime.html
+++ b/Book/bookMaxime.html
@@ -22,7 +22,7 @@
     <section class="book-page">
         <div class="book-details">
             <h1>Essai de M. Cordier Maxime</h1>
-            <img src="../Data/Book_Open.jpg" alt="Image Livre 1">
+            <img src="../Data/Book_Maxime.png" alt="Image Livre 1">
             <p class="author">Auteur: M. Cordier Maxime</p>
             <p class="description">Un superbe livre parlant de psycho d'après M. Cordier. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel nunc ut lacus convallis facilisis.</p>
         </div>
