--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- Contenu de la page d'accueil -->
     <section class="home-section">
         <div class="article" tabindex="4">
-            <img src="Data/Book_Open.jpg" alt="Image Livre 1">
+            <img src="Data/Book_Lou.png" alt="Image Livre 1">
             <div>
                 <h2><span class="title">Essai de M. Le Gall Lou</span></h2>
                 <dl>
@@ -44,7 +44,7 @@
         </div>
 
         <div class="article" tabindex="6">
-            <img src="Data/Book_Open.jpg" alt="Image Livre 1">
+            <img src="Data/Book_Maxime.png" alt="Image Livre 1">
             <div>
                 <h2><span class="title">Essai de M. Cordier Maxime</span></h2>
                 <dl>
@@ -67,7 +67,7 @@
         </div>
 
         <div class="article" tabindex="8">
-            <img src="Data/Book_Open.jpg" alt="Image Livre 1">
+            <img src="Data/Book_Rémi.png" alt="Image Livre 1">
             <div>
                 <h2><span class="title">Essai de M. Uhartegaray Rémi</span></h2>
                 <dl>
