--- a/Book/bookRemi.html
+++ b/Book/bookRemi.html
@@ -22,7 +22,7 @@
     <section class="book-page">
         <div class="book-details">
             <h1>Essai de M. Uhartegaray Rémi</h1>
-            <img src="../Data/Book_Open.jpg" alt="Image Livre 1">
+            <img src="../Data/Book_Rémi.png" alt="Image Livre 1">
             <p class="author">Auteur: M. uhartegaray Rémi</p>
             <p class="description">Un superbe livre parlant de psycho d'après M. Uhartegaray. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel nunc ut lacus convallis facilisis.</p>
         </div>
