juste un peu de css

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         </nav>
 
         <section>
-            <h1 tabindex="0">Contactez-nous</h1>
+            <h1 tabindex="0" class="contact-title">Contactez-nous</h1>
             <form action="process_contact.php" method="post" role="form">
                 <!-- Prénom -->
                 <label for="firstname">Prénom :</label>
