--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <dd>Un superbe livre parlant de psycho d'après Mme. Le Gall.</dd>
 
                     </div>
-                    <div class="button center">
+                    <div class="button-details">
                         <a href="Book/bookLou.html" class="view-details" tabindex="5">Voir les détails</a>
                     </div>
                 </dl>
@@ -59,7 +59,7 @@
                         <dd>Un superbe livre parlant de psycho d'après M. Cordier.</dd>
 
                     </div>
-                    <div class="button center">
+                    <div class="button-details">
                         <a href="Book/bookMaxime.html" class="view-details" tabindex="7">Voir les détails</a>
                     </div>
                 </dl>
@@ -82,7 +82,7 @@
                         <dd>Un superbe livre parlant de psycho d'après M. Uhartegaray.</dd>
 
                     </div>
-                    <div class="button center">
+                    <div class="button-details">
                         <a href="Book/bookRemi.html" class="view-details" tabindex="9">Voir les détails</a>
                     </div>
                 </dl>
