--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     </div>
                     <div class="button center">
-                        <a href="Book/bookLou.html" class="view-details" tabindex="5">Voir les détails</a>
+                        <a href="Book/bookLou.html" class="view-details" tabindex="5">Lire</a>
                     </div>
                 </dl>
             </div>
@@ -60,7 +60,7 @@
 
                     </div>
                     <div class="button center">
-                        <a href="Book/bookMaxime.html" class="view-details" tabindex="7">Voir les détails</a>
+                        <a href="Book/bookMaxime.html" class="view-details" tabindex="7">Lire</a>
                     </div>
                 </dl>
             </div>
@@ -83,7 +83,7 @@
 
                     </div>
                     <div class="button center">
-                        <a href="Book/bookRemi.html" class="view-details" tabindex="9">Voir les détails</a>
+                        <a href="Book/bookRemi.html" class="view-details" tabindex="9">Lire</a>
                     </div>
                 </dl>
             </div>
