Changement style contact et index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <!-- Contenu de la page d'accueil -->
     <section class="home-section">
         <div class="article" tabindex="4">
-            <img src="Data/Book_Lou.png" alt="Image Livre 1">
+            <div class="nos-images">
+                <img src="Data/Book_Lou.png" alt="Image Livre 1">
+            </div>
             <div>
                 <h2><span class="title">Essai de M. Le Gall Lou</span></h2>
                 <dl>
@@ -44,7 +46,9 @@
         </div>
 
         <div class="article" tabindex="6">
-            <img src="Data/Book_Maxime.png" alt="Image Livre 1">
+            <div class="nos-images">
+                <img src="Data/Book_Maxime.png" alt="Image Livre 1">
+            </div>
             <div>
                 <h2><span class="title">Essai de M. Cordier Maxime</span></h2>
                 <dl>
@@ -59,7 +63,7 @@
                         <dd>Un superbe livre parlant de psycho d'après M. Cordier.</dd>
 
                     </div>
-                    <div class="button center">
+                    <div class="button-details">
                         <a href="Book/bookMaxime.html" class="view-details" tabindex="7">Voir les détails</a>
                     </div>
                 </dl>
@@ -67,7 +71,9 @@
         </div>
 
         <div class="article" tabindex="8">
-            <img src="Data/Book_Rémi.png" alt="Image Livre 1">
+            <div class="nos-images">
+                <img src="Data/Book_Rémi.png" alt="Image Livre 1">
+            </div>
             <div>
                 <h2><span class="title">Essai de M. Uhartegaray Rémi</span></h2>
                 <dl>
@@ -82,7 +88,7 @@
                         <dd>Un superbe livre parlant de psycho d'après M. Uhartegaray.</dd>
 
                     </div>
-                    <div class="button center">
+                    <div class="button-details">
                         <a href="Book/bookRemi.html" class="view-details" tabindex="9">Voir les détails</a>
                     </div>
                 </dl>
