--- a/contact.html
+++ b/contact.html
@@ -20,25 +20,32 @@
             <h1 tabindex="0" class="contact-title">Contactez-nous</h1>
             <form action="process_contact.php" method="post" role="form">
                 <!-- Prénom -->
-                <label for="firstname">Prénom :</label>
-                <input type="text" id="firstname" name="firstname" required aria-labelledby="firstname-label">
-                <span id="firstname-label" class="visually-hidden">Prénom</span>
+                <div class="form-group">
+                    <label for="firstname">Prénom :</label>
+                    <input type="text" id="firstname" name="firstname" required aria-labelledby="firstname-label">
+                    <span id="firstname-label" class="visually-hidden">Prénom</span>
+                </div>
 
                 <!-- Nom -->
-                <label for="name">Nom :</label>
-                <input type="text" id="name" name="name" required aria-labelledby="name-label">
-                <span id="name-label" class="visually-hidden">Nom</span>
+                <div class="form-group">
+                    <label for="name">Nom :</label>
+                    <input type="text" id="name" name="name" required aria-labelledby="name-label">
+                    <span id="name-label" class="visually-hidden">Nom</span>
+                </div>
 
                 <!-- Email -->
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required aria-labelledby="email-label">
-                <span id="email-label" class="visually-hidden">Email</span>
+                <div class="form-group">
+                    <label for="email">Email :</label>
+                    <input type="email" id="email" name="email" required aria-labelledby="email-label">
+                    <span id="email-label" class="visually-hidden">Email</span>
+                </div>
 
                 <!-- Message -->
-                <label for="message">Message :</label>
-                <textarea id="message" name="message" rows="4" required aria-labelledby="message-label"></textarea>
-                <span id="message-label" class="visually-hidden">Message</span>
-
+                <div class="form-group">
+                    <label for="message">Message :</label>
+                    <textarea id="message" name="message" rows="4" required aria-labelledby="message-label"></textarea>
+                    <span id="message-label" class="visually-hidden">Message</span>
+                </div>
                 <!-- Bouton Soumettre -->
                 <button type="submit" aria-label="Envoyer le formulaire de contact">Envoyer</button>
             </form>
