Add an essai V1

--- a/Book/bookRemi.html
+++ b/Book/bookRemi.html
@@ -24,38 +24,57 @@
             <h1>Essai de M. Uhartegaray Rémi</h1>
             <img src="../Data/Book_Rémi.png" alt="Image Livre 1">
             <p class="author">Auteur: M. Uhartegaray Rémi</p>
-            
+    </section>
+    <div class="book-content">
             <!-- Texte divisé en parties avec attributs ARIA et tabindex -->
             <div role="region" aria-label="Introduction" tabindex="0">
-                <p aria-live="polite">Bonjour,</p>
-                <p aria-live="polite">La psychologie sociale a toujours été une passion fascinante pour moi, avec ses innombrables nuances et ses observations intrigantes sur le comportement humain.</p>
+                <p aria-live="polite">La psychologie sociale, discipline étudiant les dynamiques interpersonnelles et les influences de l'environnement sur le comportement individuel, est une clé pour comprendre les intrications complexes qui régissent nos interactions quotidiennes. Dans un monde de plus en plus informatisé, cette science, plus ou moins connue de tous, trouve une application cruciale dans le domaine de l'accessibilité en informatique. En effet, la manière dont les individus perçoivent, interagissent et comprennent les technologies numériques influence directement la conception et l'utilisation des interfaces, des sites web et des logiciels. Ainsi, l’étude des liens entre la psychologie sociale et l'accessibilité informatique nous offre une vision précieuse sur la façon dont les technologies peuvent être conçues de manière inclusive pour répondre aux divers besoins de notre société.
+                </p>
             </div>
 
-            <div role="region" aria-label="Expériences" tabindex="0">
-                <p aria-live="polite">Il y a eu des moments où j'ai clairement ressenti le phénomène du "pied dans la bouche", lorsque mes paroles semblaient se retourner contre moi.</p>
-                <p aria-live="polite">Par exemple, lors de discussions animées sur des sujets sensibles, il m'est arrivé de m'emballer un peu trop et de regretter mes paroles par la suite.</p>
+            <div role="region" aria-label="psychosocial1" tabindex="0">
+                <p aria-live="polite">La psychologie sociale, est une science captivante des intrications humaines, elle a marqué le début de mon intérêt lors de la découverte du livre "Petit traité de manipulation à l'usage des honnêtes gens" de Robert-Vincent Joule et Jean-Léon Beauvois paru en 1987. Ce livre a été pour moi une révélation, que j’ai décidé de présentatier lors de mon DUT Informatique. Parmi les concepts familiers, tels que le "pied dans la porte" et le "pied dans la bouche", j'ai trouvé un univers passionnant où les mots pouvaient être maniés habilement pour tirer avantage des situations ou, à l'inverse, se protéger contre les manipulateurs.</p>
             </div>
-
-            <div role="region" aria-label="Leçon Apprise" tabindex="0">
+            <div role="region" aria-label="psychosocial2" tabindex="0">
+                <p aria-live="polite">La révélation du pouvoir des mots m’est apparue lors de ma lecture de ce livre. La stratégie de demander un petit effort préalable à une personne avant de solliciter quelque chose de plus significatif m'a frappé. Cette tactique, omniprésente dans notre quotidien, peut être délibérée ou instinctive, mais elle révèle la subtilité avec laquelle les interactions sont construites. Demander poliment l'heure, exprimer sa gratitude, puis solliciter une pièce ou un petit service s'avère bien plus efficace que requérir directement le service à un inconnu. Cette stratégie est particulièrement observée avec les personnes sans abris ou avec les personnes qui demandent de remplir un formulaire pour venir en aide à une fausse cause importante pour ensuite vous demander une participation financière.</p>
+            </div>
+            <div role="region" aria-label="psychosocial2" tabindex="0">
                 <p aria-live="polite">Ces expériences m'ont appris l'importance de la réflexion avant de parler, en reconnaissant que les mots ont un pouvoir considérable sur la perception des autres.</p>
             </div>
-
-            <div role="region" aria-label="Autre Expérience" tabindex="0">
-                <p aria-live="polite">D'un autre côté, le concept du "pied dans la porte" a également croisé mon chemin.</p>
-                <p aria-live="polite">J'ai constaté que des petites demandes initiales, auxquelles je répondais favorablement, pouvaient souvent ouvrir la porte à des demandes plus importantes par la suite.</p>
+            <div role="region" aria-label="psychosocial2" tabindex="0">
+                <p aria-live="polite">La révélation du pouvoir des mots m’est apparue lors de ma lecture de ce livre. La stratégie de demander un petit effort préalable à une personne avant de solliciter quelque chose de plus significatif m'a frappé. Cette tactique, omniprésente dans notre quotidien, peut être délibérée ou instinctive, mais elle révèle la subtilité avec laquelle les interactions sont construites. Demander poliment l'heure, exprimer sa gratitude, puis solliciter une pièce ou un petit service s'avère bien plus efficace que requérir directement le service à un inconnu. Cette stratégie est particulièrement observée avec les personnes sans abris ou avec les personnes qui demandent de remplir un formulaire pour venir en aide à une fausse cause importante pour ensuite vous demander une participation financière.</p>
             </div>
-
-            <div role="region" aria-label="Réflexion Personnelle" tabindex="0">
-                <p aria-live="polite">Ces expériences m'ont incité à approfondir ma compréhension du psychosocial, en reconnaissant que nos interactions quotidiennes sont souvent façonnées par des phénomènes psychologiques complexes.</p>
-                <p aria-live="polite">J'attends avec impatience de continuer à explorer ces aspects intrigants de la psychologie sociale tout au long de mon parcours académique.</p>
+            <div role="region" aria-label="psychosocial4" tabindex="0">
+                <p aria-live="polite">Un autre aspect fascinant de la psychologie sociale est la technique d'engager une personne dans une tâche simple pour ensuite solliciter quelque chose de plus important. Cette approche est basée sur la motivation intrinsèque ou extrinsèque pour inciter la personne à accomplir la n-ième tâche en vue d'une satisfaction ultérieure, conditionnée à la proportionnalité de la dernière tâche.</p>
             </div>
-
-            <div role="region" aria-label="Signature" tabindex="0">
-                <p aria-live="polite">Cordialement,<br>[Your Name]</p>
+            <div role="region" aria-label="psychosocial5" tabindex="0">
+                <p aria-live="polite">La psychologie sociale vie dans les interactions directes, laissant une empreinte invisible sur notre vision du monde. Les exemples les plus frappants se trouvent dans les magasins, où la fixation des prix pour tout produit ou service suit des mécanismes psychologiques complexes. La valeur attribuée à un produit est souvent influencée par des critères qualitatifs ou l'image de marque, ce qui est un aspect crucial. Les marques de luxe, notamment, peuvent vendre des produits ordinaires à des prix exorbitants simplement grâce à la présence de leur logo.</p>
             </div>
+            <div role="region" aria-label="psychosocial6" tabindex="0">
+                <p aria-live="polite">Un autre aspect intrigant concerne l'attrait exercé par les soldes et les réductions. Cette stratégie commerciale, inlassablement efficace, se manifeste par des offres telles que "achetez deux, le troisième est offert". Bien que cela équivaille à une réduction similaire de trente-trois pourcents sur le lot complet, l'acheteur est naturellement enclin à opter pour le pack offrant un produit supplémentaire, renforçant son sentiment de satisfaction.</p>
+            </div>
+            <div role="region" aria-label="psychosocial7" tabindex="0">
+                <p aria-live="polite">Il serait tout aussi enrichissant d'explorer les phénomènes de groupe, un domaine déjà largement étudié. L'étude comportementale des élèves ou étudiants révèle une science sociale complexe, allant du sentiment de cohésion au conformisme aux normes du groupe. Cela, souvent dans le but d'éviter de se démarquer, même si certaines personnes ne se sentent pas véritablement à leurs places, elles ne veulent pas être mises de côté. La psychologie sociale continue de façonner notre perception du monde, même lorsque personne ne communique directement avec nous, simplement à travers nos yeux et nos expériences.</p>
+            </div>
+            
 
+            <div role="region" aria-label="accessibility1" tabindex="0">
+                <p aria-live="polite">L'accessibilité dans le monde de l'informatique revêt une dimension sociale essentielle, une technologie omniprésente qui, pour bon nombre de personnes, demeure complexe et abstraite. Cette réalité m'a particulièrement frappé au cours de mes études en informatique.</p>
+            </div>
+            <div role="region" aria-label="accessibility2" tabindex="0">
+                <p aria-live="polite">Un exemple de cette complexité se manifeste chez nos parents, fréquemment éloignés de l'immersion dans un monde informatisé dès leur enfance. Pour certains, l'idée de ne jamais avoir eu besoin d'un ordinateur ou d'un téléphone portable semble presque inconcevable, une réalité qui suscite parfois une appréhension à l'égard de ces outils puissants. L'accessibilité, dans ce contexte, devient cruciale, permettant à chacun d'utiliser ces technologies sans nécessité d'une compréhension technique approfondie.</p>
+            </div>
+            <div role="region" aria-label="accessibility3" tabindex="0">
+                <p aria-live="polite">Bien que l'utilisation d'un clavier ou d'une souris puisse présenter des défis, l'informatique devrait rendre l'accès à Internet, aux interfaces et aux logiciels intuitifs après une première compréhension. L'objectif est de permettre aux utilisateurs de naviguer sur des sites web, par exemple, en sachant instinctivement où trouver les informations recherchées. Cela peut être accompli de deux manières : d'une part, en suivant une logique standardisée établie par d'autres sites au fil des années, et d'autre part, en organisant les informations de manière pertinente et intuitive.</p>
+            </div>
+            <div role="region" aria-label="accessibility4" tabindex="0">
+                <p aria-live="polite">Cet impératif s'applique à tous, y compris aux personnes malvoyantes, aveugles ou handicapées. Une conception logique et pertinente d'un site web ou d'une application garantit à l'utilisateur une expérience fluide et sans difficulté pour trouver les éléments qui l'intéressent. Cela bénéficie tant à l'utilisateur, qui profite d'une expérience agréable, qu'au propriétaire du site, susceptible de recevoir des retours positifs et, dans le cas d'un site commercial, d'augmenter ses ventes. Ainsi, rendre l'informatique accessible à tous va au-delà de la simple fonctionnalité technique, englobant également des considérations sociales et d'expérience utilisateur.</p>
+            </div>
+            <div role="region" aria-label="Conclusion" tabindex="0">
+                <p aria-live="polite">En conclusion, la psychologie sociale se révèle être un levier essentiel dans le façonnement de l'expérience utilisateur en informatique. En comprenant les mécanismes psychologiques qui influencent la perception et l'interaction avec les technologies numériques, il devient possible de concevoir des interfaces plus intuitives et inclusives. L'accessibilité en informatique n'est pas simplement une question technique, mais une démarche ancrée dans la compréhension des besoins et des comportements humains. En utilisant les principes de la psychologie sociale à la conception numérique, nous contribuons à créer un environnement technologique qui répond à la diversité que comporte notre société. Ainsi, la psychologie sociale et l'accessibilité informatique pourraient et permettent déjà d’obtenir des expériences numériques plus inclusive et enrichissante.</p>
+            </div>
         </div>
-    </section>
+    </div>
 </body>
 
 </html>
