Update Remi's part

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         <div class="article" tabindex="8">
             <div class="nos-images">
-                <img src="Data/Book_Rémi.png" alt="Image Livre 1">
+                <img src="Data/Book_Rémi.png" alt="Essai de M. Uhartegaray Rémi">
             </div>
             <div>
                 <h2><span class="title">Essai de M. Uhartegaray Rémi</span></h2>
@@ -82,7 +82,7 @@
                         <dd>Psycho-social par M. Uhartegaray</dd>
 
                         <dt><span class="label">Auteur:</span></dt>
-                        <dd>M. Uharttegaray Rémi</dd>
+                        <dd>M. Uhartegaray Rémi</dd>
 
                         <dt><span class="label">Description:</span></dt>
                         <dd>Un superbe livre parlant de psycho d'après M. Uhartegaray.</dd>
